Twitter handle, not email, on title slide
Also, use BEACON logo instead of MSU logo.

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage{booktabs}
 \usepackage{hyperref}
 \usepackage[scale=2]{ccicons}
+\usepackage{fontawesome}
 \usepackage{tikz}
 \usepackage{bm}
 
@@ -27,8 +28,8 @@
 \title{TITLE}
 \subtitle{EVENT}
 \date{DATE}
-\author{Matthew Andres Moreno \newline \texttt{mmore500@msu.edu}}
-\titlegraphic{\hfill\includegraphics[height=2cm]{img/MSU-Wordmark-Black}}
+\author{Matthew Andres Moreno \newline {\faTwitter} @MorenoMatthewA \newline}
+\titlegraphic{\vspace{32ex}\hfill\includegraphics[height=2.5cm]{img/BEACON-logo}}
 
 \begin{document}
 
