Add frame-by-frame animation example

--- a/bibl.bib
+++ b/bibl.bib
@@ -8,3 +8,14 @@
     url = {http://www.jmlr.org/papers/volume13/fortin12a/fortin12a.pdf},
     keywords = {distributed evolutionary algorithms, software tools}
 }
+
+@article{reid2015army,
+  title={Army ants dynamically adjust living bridges in response to a cost--benefit trade-off},
+  author={Reid, Chris R and Lutz, Matthew J and Powell, Scott and Kao, Albert B and Couzin, Iain D and Garnier, Simon},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={112},
+  number={49},
+  pages={15113--15118},
+  year={2015},
+  publisher={National Acad Sciences}
+}
