--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -1,26 +1,106 @@
 \appendix
 
+\appendix
+
+\begin{frame}{For More Information}
+
+\vspace{1ex}
+
+\begin{adjustbox}{width=\textwidth,center}%
+{\HUGE\url{\projecturl}}%
+\end{adjustbox}
+
+\vspace{3ex}
+
+\begin{itemize}
+\item live in-browser demo
+\item source code
+\item data
+\item figures and graphics
+\item how-to-replicate tutorial
+\item publication
+\item slides
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{People}
+
+\begin{columns}
+\begin{column}{0.25\textwidth}
+  \centering
+  \includegraphics[width=0.7\textwidth]{moreno}
+\end{column}
+\begin{column}{0.75\textwidth}
+  \textbf{Matthew Andres Moreno}
+
+  \href{https://twitter.com/MorenoMatthewA}{{\faTwitter} @MorenoMatthewA}
+
+  \href{https://mmore500.github.io}{{\faGlobe} \texttt{https://mmore500.github.io}}
+
+  \href{mailto: mmore500@msu.edu}{{\faEnvelope} \texttt{mmore500@msu.edu}}
+
+\end{column}
+\end{columns}
+
+\vspace{1ex}
+
+\begin{columns}
+\begin{column}{0.25\textwidth}
+  \centering
+  \includegraphics[width=0.7\textwidth]{ofria}
+\end{column}
+
+\begin{column}{0.75\textwidth}
+  \textbf{Charles Ofria}
+
+  \href{https://twitter.com/CharlesOfria}{{\faTwitter} @CharlesOfria}
+
+  \href{https://ofria.com}{{\faGlobe} \texttt{https://ofria.com}}
+
+  \href{mailto: ofria@msu.edu}{{\faEnvelope} \texttt{ofria@msu.edu}}
+
+\end{column}
+\end{columns}
+\vfill
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\includegraphics[width=\textwidth, trim={0 0 0 150}, clip]{group_photo}
+\end{column}
+\begin{column}{0.5\textwidth}
+\includegraphics[width=\textwidth]{devolab-logo}
+\end{column}
+\end{columns}
+
+\end{frame}
+
 \begin{frame}{Acknowledgements}
 \begin{itemize}
-\item DEAP \cite{Fortin2012DEAP:Easy}
-\item nice people
+\item Empirical Library for scientific software development in C++
+\item Open Science Framework via the Center for Open Science
+\item computational resources via Michigan State University's Institute for Cyber-Enabled Research
+\item This research was supported in part by NSF grants DEB-1655715 and DBI-0939454.\footnote[1]{Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.}
 \end{itemize}
-\vspace{-1ex}
 
-\newcommand{\innerspacer}{0.1\textwidth}
-\newcommand{\content}{0.3\textwidth}
-\newcommand{\outerspacer}{0.15\textwidth}
+\vfill
 
+\newcommand{\innerspacer}{0.07\textwidth}
+\newcommand{\content}{0.24\textwidth}
+\newcommand{\outerspacer}{0.07\textwidth}
 
 \begin{center}
  \begin{columns}
 	\begin{column}{\outerspacer}~\end{column}
 	 \begin{column}{\content}
+		\includegraphics[width=\textwidth]{NSF-logo}
+ 	\end{column}
+  \begin{column}{\innerspacer}~\end{column}
+	 \begin{column}{\content}
 		\includegraphics[width=\textwidth]{BEACON-logo}
  	\end{column}
   \begin{column}{\innerspacer}~\end{column}
  	\begin{column}{\content}
-   \includegraphics[width=\textwidth]{MSU-helmet}
+   \includegraphics[width=0.75\textwidth]{MSU-helmet}
  	\end{column}
  	\begin{column}{\outerspacer}~\end{column}
  \end{columns}
@@ -30,7 +110,17 @@
 
 
 \begin{frame}[standout]
-  Questions?
+\vspace{17ex}
+
+{\Huge
+Questions?%
+}
+\vspace{15ex}
+
+\begin{adjustbox}{width=0.5\textwidth,center}%
+\url{\projecturl}%
+\end{adjustbox}
+
 \end{frame}
 
 \begin{frame}[allowframebreaks]{References}
