Add NSF GRFP acknowledgement

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -75,11 +75,13 @@
 \end{frame}
 
 \begin{frame}{Acknowledgements}
+\small
 \begin{itemize}
 \item Empirical Library for scientific software development in C++
 \item Open Science Framework via the Center for Open Science
 \item computational resources via Michigan State University's Institute for Cyber-Enabled Research
-\item This research was supported in part by NSF grants DEB-1655715 and DBI-0939454.\footnote[1]{Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.}
+\item This material is based upon work supported by the National Science Foundation Graduate Research Fellowship under Grant No. DGE-1424871.\footnote[1]{\label{foot:disclaimer} \tiny Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.}
+\item This research was supported in part by NSF grants DEB-1655715 and DBI-0939454.\footnotemark[1]
 \end{itemize}
 
 \vfill
