Add example for Forgetica Sans

--- a/bibl.bib
+++ b/bibl.bib
@@ -19,3 +19,13 @@
   year={2015},
   publisher={National Acad Sciences}
 }
+
+@misc{neilsen2016tradition,
+  author = {Nielsen},
+  title = {TRADITION TRADE-OUTS - THE NEW HOLIDAY NORMAL},
+  journal = {na},
+  type = {Blog},
+  number = {November 21},
+  year = {2016},
+  howpublished = {\url{https://www.nielsen.com/us/en/insights/news/2016/tradition-tradeouts--the-new-holiday-normal.html}}
+}
