--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 \usepackage{xspace}
 \newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
 
-
+\newfontfamily\sansforgetica{SansForgetica-Regular.otf}
 
 \title{TITLE}
 \subtitle{EVENT}
